<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="app_name" translatable="false">OmniSwitch</string>
        <string name="package_remove_task_title">Remove</string>
        <string name="package_inspect_item_title">App info</string>
        <string name="recents_settings_title" translatable="false">OmniSwitch</string>
        <string name="start_on_boot_title">Start on boot</string>
        <string name="start_on_boot_summary">Start and enable on device boot</string>
        <string name="opacity_title">Opacity</string>
        <string name="opacity_summary">Background opacity of overlay view</string>
        <string name="animate_title">Animate</string>
        <string name="animate_title_summary">Animate show and hide of overlay view</string>
        <string name="adjust_handle_help">Move and resize drag handle</string>
        <string name="icon_size_normal">Normal</string>
        <string name="icon_size_small">Small</string>
        <string name="icon_size_large">Large</string>
        <string name="icon_size_title">Icon size</string>
        <string name="ok">OK</string>
        <string name="cancel">Cancel</string>
        <string name="drag_handle_color_title">Color</string>
        <string name="drag_handle_color_dialog_title">Color</string>
        <string name="service_background_processes"><xliff:g id="memory">%1$s</xliff:g> free</string>
        <string name="service_foreground_processes"><xliff:g id="memory">%1$s</xliff:g> used</string>
        <string name="show_rambar_title">Show memory usage</string>
        <string name="show_rambar_summary">Display amount of free and used memory</string>
        <string name="show_app_labels">Show app name</string>
        <string name="show_app_labels_summary">Application name will be displayed with the icon</string>
        <string name="category_overlay_title">Overlay</string>
        <string name="category_drag_handle_title">Drag handle</string>
        <string name="category_favorite_title">Favorites</string>
        <string name="favorite_apps_config_title">Manage favorites</string>
        <string name="favorite_apps_config_summary">Define apps shown in favorites view</string>
        <string name="favorite_apps_add_dialog_title">Add apps</string>
        <string name="favorite_add">Add\u2026</string>
        <string name="location_left">Left</string>
        <string name="location_right">Right</string>
        <string name="reset">Default</string>
        <string name="toggle_last_app">Last app</string>
        <string name="toggle_last_app_help">Switch to last app</string>
        <string name="kill_all_apps_help">Kill all apps</string>
        <string name="kill_other_apps_help">Kill other apps</string>
        <string name="settings_help">Settings</string>
        <string name="home_help">Home</string>
        <string name="kill_all_apps">Kill all</string>
        <string name="kill_other_apps">Kill other</string>
        <string name="settings">Settings</string>
        <string name="home">Home</string>
        <string name="buttons_title">Buttons</string>
        <string name="buttons_summary">Configure action buttons in overlay view</string>
        <string name="auto_hide_handle">Auto-hide</string>
        <string name="auto_hide_handle_summary">Two swipes to show overlay view</string>
        <string name="no_recent_apps_title">No recent apps</string>
        <string name="drag_handle_opacity_title">Opacity</string>
        <string name="drag_handle_enable_title">Enable</string>
        <string name="drag_handle_enable_summary">Disable only if you use another activation method</string>
        <string name="allapps_help">App drawer</string>
        <string name="allapps">Apps</string>
        <string name="dim_behind_title">Dim background</string>
        <string name="dim_behind_summary">Apply opacity to complete screen</string>
        <string name="gravity_title">Horizontal gravity</string>
        <string name="gravity_center">Center</string>
        <string name="gravity_drag">Drag handle side</string>
        <string name="dialog_pick_iconpack_title">Pick icon pack</string>
        <string name="default_iconpack_title">Default icons</string>
        <string name="icon_packs_title">Icon packs</string>
        <string name="no_iconpacks_summary">No icon packs installed</string>
        <string name="icon_pack_title">Icon pack</string>
        <string name="icon_pack_summary">Use icon pack for app icons</string>
        <string name="category_speed_switcher_title">Quick Switcher</string>
        <string name="speed_switcher_enable_summary">Long press drag handle to activate</string>
        <string name="speed_switcher_enable_title">Enable</string>
        <string name="back">Back</string>
        <string name="back_help">Back</string>
        <string name="kill_current">Kill current</string>
        <string name="kill_current_help">Kill current app</string>
        <string name="speed_switch_color_summary">Blue -recent apps. Green - favorites. Red - actions</string>
        <string name="speed_switch_color">Level background colors</string>
        <string name="speed_switch_limit_summary">Limit area for level changes</string>
        <string name="speed_switch_limit">Level change area</string>
        <string name="speed_switch_button_title">Buttons</string>
        <string name="speed_switch_button_summary">Configure action buttons in quick switcher view</string>
        <string name="speed_switch_items_summary">Maximum number of level items</string>
        <string name="speed_switch_item">Level item limit</string>
        <string name="immersive_mode">Immersive mode</string>
        <string name="immersive_mode_help">Toggle immersive mode</string>
        <string name="package_add_favorite_title">Add to favorites</string>
        <string name="package_remove_favorite_title">Remove from favorites</string>
        <string name="open_favorite_help">Open/close favorites view</string>
        <string name="button_pos_title">Button position</string>
        <string name="button_pos_top">Top/Left</string>
        <string name="button_pos_bottom">Bottom/Right</string>
        <string name="bg_style_solid_light">Light</string>
        <string name="bg_style_solid_dark">Dark</string>
        <string name="bg_style_transparent">Transparent</string>
        <string name="bg_style_title">Background style</string>
        <string name="lock_to_app">Pin app</string>
        <string name="lock_app_help">Pin current app</string>
        <string name="app_filter_category_title">App filter</string>
        <string name="app_filter_boot_title">Active since boot</string>
        <string name="layout_style_title">Style</string>
        <string name="layout_style_1">Horizontal</string>
        <string name="layout_style_2">Vertical</string>
        <string name="no_limit">No limit</string>
        <string name="one_hour">1 hour</string>
        <string name="three_hours">3 hours</string>
        <string name="six_hours">6 hours</string>
        <string name="twelve_hours">12 hours</string>
        <string name="one_day">1 day</string>
        <string name="two_days">2 days</string>
        <string name="one_week">1 week</string>
        <string name="app_filter_time_title">Active since</string>
        <string name="close_help">Close overlay</string>
        <string name="close">Close</string>
        <string name="thumb_size_title">Thumbnail size</string>
        <string name="thumb_size_normal">Normal</string>
        <string name="thumb_size_small">Small</string>
        <string name="thumb_size_medium">Medium</string>
        <string name="package_lock_task_title">Pin app</string>
        <string name="lock_app_not_enabled">Screen pinning is not enabled in security settings</string>
        <string name="app_filter_running_title">Running only</string>
        <string name="menu">Menu</string>
        <string name="menu_help">Menu</string>
        <string name="enable_title">Enable</string>
        <string name="adjust_handle_width">Width</string>
        <string name="adjust_handle_position">Position</string>
        <string name="package_top_task_title">Top</string>
        <string name="package_left_task_title">Left</string>
        <string name="package_bottom_task_title">Bottom</string>
        <string name="package_right_task_title">Right</string>
        <string name="package_full_task_title">Full size</string>
        <string name="shortcut_label_toggle_overlay">Toggle overlay</string>
        <string name="adjust_handle_title_new">Configure drag handle</string>
        <string name="adjust_handle_summary">Configure position size and color</string>
        <string name="settings_button_text">Settings</string>
        <string name="wallpaper_button_text">Wallpaper</string>
        <string name="category_launcher_title">Launcher</string>
        <string name="launcher_mode_summary">Run OmniSwitch also as your launcher. After enabling press home and select OmniSwitch</string>
        <string name="launcher_mode_title">Enable</string>
        <string name="launcher_mode_enable_check">Disabling is not possible while the launcher mode is active</string>
        <string name="welcome_cling_header">Welcome to OmniSwitch launcher mode</string>
        <string name="launch_stats_title">Launch statistics</string>
        <string name="launch_stats_summary">Collect statistics about launched apps. Data will not be shared and only stored locally</string>
        <string name="launch_stats_delete_title">Clear statistics</string>
        <string name="launch_stats_delete_summary">Clear current collected launch statistics</string>
        <string name="favorite_apps_config_stat_title">Statistic favorites</string>
        <string name="favorite_apps_config_stat_summary">Create a favorite list based on collected launch statistics</string>
        <string name="revert_recents_summary">Fill recent apps from bottom</string>
        <string name="revert_recents_title">Revert recent apps list</string>
        <string name="dim_action_buttons_summary">Add extra background dim to action buttons</string>
        <string name="dim_action_buttons_title">Dim action button background</string>
        <string name="locked_apps_sort_summary">Locked apps will be displayed first in list</string>
        <string name="locked_apps_sort_title">Sort locked apps</string>
        <string name="block_apps_on_splitscreen_summary">While in split-screen mode block switches to unsupported apps</string>
        <string name="block_apps_on_splitscreen_title">Block undockable apps</string>
        <string name="use_power_hint_summary">Use power HAL hint to speed up. Device dependent!</string>
        <string name="use_power_hint_title">Use power hint</string>
        <string name="hidden_apps_config_summary">Define apps hidden in app drawer views</string>
        <string name="hidden_apps_config_title">Hidden applications</string>
        <string name="category_allapps_title">Application drawer</string>
        <string name="launcher_settings">Launcher settings</string>
        <string name="weather_icon_pack_title">Weather condition icon pack</string>
        <string name="pref_allDayEvents_title">Show all day events</string>
        <string name="pref_allDayEvents_summary"></string>
        <string name="preferences_widget_days_title">Display period</string>
        <string name="preferences_widget_days_default" translatable="false" >14</string>
        <string name="pref_show_today_title">Show date</string>
        <string name="pref_show_today_summary"></string>
        <string name="pref_show_weather_title">Show weather</string>
        <string name="pref_show_weather_summary"></string>
        <string name="pref_show_events_title">Show upcoming events</string>
        <string name="pref_show_events_summary"></string>
</resources>