<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/recents_settings_title" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable"
        android:title="@string/enable_title" />

    <PreferenceCategory
        android:key="category_overlay"
        android:title="@string/category_overlay_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="animate"
            android:summary="@string/animate_title_summary"
            android:title="@string/animate_title" />

        <ListPreference
            android:entries="@array/icon_size_entries"
            android:entryValues="@array/icon_size_values"
            android:key="icon_size"
            android:summary="@string/icon_size_normal"
            android:title="@string/icon_size_title" />

        <org.omnirom.omniswitch.ui.IconPackPreference
            android:key="iconpack"
            android:summary="@string/icon_pack_summary"
            android:title="@string/icon_pack_title" />

        <ListPreference
            android:entries="@array/bg_style_entries"
            android:entryValues="@array/bg_style_values"
            android:key="bg_style"
            android:summary="@string/bg_style_solid_light"
            android:title="@string/bg_style_title" />

        <org.omnirom.omniswitch.ui.SeekBarPreference
            android:defaultValue="70"
            android:key="opacity"
            android:max="100"
            android:summary="@string/opacity_summary"
            android:title="@string/opacity_title" />

        <CheckBoxPreference
            android:key="dim_behind"
            android:summary="@string/dim_behind_summary"
            android:title="@string/dim_behind_title" />

        <CheckBoxPreference
            android:key="dim_action_buttons"
            android:summary="@string/dim_action_buttons_summary"
            android:title="@string/dim_action_buttons_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_rambar"
            android:summary="@string/show_rambar_summary"
            android:title="@string/show_rambar_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_labels"
            android:summary="@string/show_app_labels_summary"
            android:title="@string/show_app_labels" />

        <Preference
            android:key="button_config"
            android:summary="@string/buttons_summary"
            android:title="@string/buttons_title" />

        <ListPreference
            android:entries="@array/button_pos_entries"
            android:entryValues="@array/button_pos_values"
            android:key="button_pos"
            android:summary="@string/button_pos_top"
            android:title="@string/button_pos_title"
            android:defaultValue="1" />
        <ListPreference
            android:entries="@array/layout_style_entries"
            android:entryValues="@array/layout_style_values"
            android:key="layout_style"
            android:title="@string/layout_style_title"
            android:defaultValue="1" />
        <ListPreference
            android:defaultValue="1.0"
            android:entries="@array/thumb_size_entries"
            android:entryValues="@array/thumb_size_values"
            android:key="thumb_size"
            android:title="@string/thumb_size_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="revert_recents"
            android:summary="@string/revert_recents_summary"
            android:title="@string/revert_recents_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="locked_apps_sort"
            android:summary="@string/locked_apps_sort_summary"
            android:title="@string/locked_apps_sort_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="block_apps_on_splitscreen"
            android:summary="@string/block_apps_on_splitscreen_summary"
            android:title="@string/block_apps_on_splitscreen_title" />
        <CheckBoxPreference
            android:key="use_power_hint"
            android:summary="@string/use_power_hint_summary"
            android:title="@string/use_power_hint_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="app_filter_category"
        android:title="@string/app_filter_category_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="app_filter_boot"
            android:title="@string/app_filter_boot_title" />
        <ListPreference
            android:entries="@array/app_filter_time_entries"
            android:entryValues="@array/app_filter_time_values"
            android:key="app_filter_time"
            android:title="@string/app_filter_time_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="app_filter_running"
            android:title="@string/app_filter_running_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_drag_handle"
        android:title="@string/category_drag_handle_title" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="drag_handle_enable"
            android:summary="@string/drag_handle_enable_summary"
            android:title="@string/drag_handle_enable_title" />

        <Preference
            android:dependency="drag_handle_enable"
            android:key="adjust_handle"
            android:title="@string/adjust_handle_title_new"
            android:summary="@string/adjust_handle_summary"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="drag_handle_enable"
            android:key="auto_hide_handle"
            android:summary="@string/auto_hide_handle_summary"
            android:title="@string/auto_hide_handle" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_speed_switcher"
        android:title="@string/category_speed_switcher_title" >
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="drag_handle_enable"
            android:key="speed_switcher"
            android:summary="@string/speed_switcher_enable_summary"
            android:title="@string/speed_switcher_enable_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="speed_switcher"
            android:key="speed_switch_color"
            android:summary="@string/speed_switch_color_summary"
            android:title="@string/speed_switch_color" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="speed_switcher"
            android:key="speed_switch_limit"
            android:summary="@string/speed_switch_limit_summary"
            android:title="@string/speed_switch_limit" />

        <org.omnirom.omniswitch.ui.NumberPickerPreference
            android:defaultValue="10"
            android:dependency="speed_switcher"
            android:key="speed_switch_items"
            android:summary="@string/speed_switch_items_summary"
            android:title="@string/speed_switch_item" />

        <Preference
            android:dependency="speed_switcher"
            android:key="speed_switch_button_config"
            android:summary="@string/speed_switch_button_summary"
            android:title="@string/speed_switch_button_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_favorite"
        android:title="@string/category_favorite_title" >
        <Preference
            android:key="favorite_apps_config"
            android:summary="@string/favorite_apps_config_summary"
            android:title="@string/favorite_apps_config_title" />

        <SwitchPreference
            android:key="launch_stats"
            android:summary="@string/launch_stats_summary"
            android:title="@string/launch_stats_title" />

        <Preference
            android:key="launch_stats_delete"
            android:dependency="launch_stats"
            android:summary="@string/launch_stats_delete_summary"
            android:title="@string/launch_stats_delete_title" />

        <Preference
            android:key="favorite_apps_config_stat"
            android:dependency="launch_stats"
            android:summary="@string/favorite_apps_config_stat_summary"
            android:title="@string/favorite_apps_config_stat_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_allapps"
        android:title="@string/category_allapps_title" >
        <Preference
            android:key="hidden_apps_config"
            android:summary="@string/hidden_apps_config_summary"
            android:title="@string/hidden_apps_config_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_launcher_title" >

    </PreferenceCategory>

    <PreferenceScreen
        android:key="category_launcher"
        android:title="@string/launcher_settings" >

        <SwitchPreference
            android:key="launcher_mode"
            android:summary="@string/launcher_mode_summary"
            android:title="@string/launcher_mode_title" />

        <SwitchPreference
            android:key="pref_showWeather"
            android:title="@string/pref_show_weather_title"
            android:summary="@string/pref_show_weather_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <ListPreference
            android:key="pref_weatherIconPack"
            android:title="@string/weather_icon_pack_title"
            android:persistent="true"
            android:dependency="pref_showWeather" />

        <SwitchPreference
            android:key="pref_showEvents"
            android:title="@string/pref_show_events_title"
            android:summary="@string/pref_show_events_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreference
            android:key="pref_allDayEvents"
            android:title="@string/pref_allDayEvents_title"
            android:summary="@string/pref_allDayEvents_summary"
            android:defaultValue="false"
            android:persistent="true"
            android:dependency="pref_showEvents" />

        <ListPreference
            android:key="pref_showEventsPeriod"
            android:defaultValue="@string/preferences_widget_days_default"
            android:title="@string/preferences_widget_days_title"
            android:entries="@array/preferences_widget_days_labels"
            android:entryValues="@array/preferences_widget_days_values"
            android:dependency="pref_showEvents" />

        <SwitchPreference
            android:key="pref_showToday"
            android:title="@string/pref_show_today_title"
            android:summary="@string/pref_show_today_summary"
            android:defaultValue="true"
            android:persistent="true" />

    </PreferenceScreen>
</PreferenceScreen>
